--- a/stylesheets/main-page.scss
+++ b/stylesheets/main-page.scss
@@ -3,7 +3,8 @@
     width: 100%;
     margin: 0px;
     scrollbar-width: none;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: visible;
 
     header {
         background: none;
